[metadata]
name = launchd-env
version = 2019.02.25
url = https://github.com/looking-for-a-job/launchd-env.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = launchd

[options]
install_requires = 
	click
	env_file
	public
	setuptools
packages = 
	launchd_env
