# https://pypi.org/project/setupcfg-generator/
[metadata]
name = launchd-env
version = 2019.4.16
url = https://github.com/looking-for-a-job/launchd-env.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = launchd

[options]
install_requires = 
	click
	env_file
	setuptools
packages = 
	launchd_env
